# freight

./: .eslintrc.json  .gitignore  Cargo.toml  Dockerfile  README.md  docusaurus.config.js  package.json  renovate.json
.cargo/: config.toml
.github/: release.yml
.github/workflows/: build.yml  version.yml
docs/: _config.yml  index.md  sidebars.js
docs/01-getting-started/: 01-installation.md  01-introduction.md  02-hello-world.md  02-installation.md
docs/02-specification/: _category_.yml  functions.md  packages.md  types.md
docs/getting-started/: index.md  installation.md
docs/specification/: index.md  modules.md  packages.md  types.md  variables.md
lib/: io.f  io.freight
src/: barge.rs  config.rs  lib.rs  main.rs  project.rs
src/pages/: about.md  index.tsx
