[package]
name = "freight"
description = "The package-oriented programming language."
version = "0.0.1"
edition = "2021"
homepage = "https://tubbo.github.io/freight"
repository = "https://github.com/tubbo/freight"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive", "wrap_help"] }
envy = "0.4.2"
glob = "0.3.1"
lalrpop-util = "0.20.0"
merge = "0.1.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
toml = "0.7.6"
typed-html = "0.2.2"
xdg = "2.5.2"

[build-dependencies]
lalrpop = "0.20.0"
