[package]
name = "freight"
description = "The package-oriented programming language."
version = "0.0.1"
edition = "2021"
homepage = "https://tubbo.github.io/freight"
repository = "https://github.com/tubbo/freight"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
lalrpop-util = "0.20.1"

[build-dependencies]
lalrpop = "0.20.1"
